- changed default values of heuristics/objpscostdiving/maxsols and heuristics/rootsoldiving/maxsols to -1
- new parameter constraints/knapsack/disaggregation
- changed default value of separating/strongcg/maxroundsroot to 20
- changed default value of separating/cmir/maxroundsroot to 10
- new parameters separating/cmir/maxfails, separating/cmir/maxfailsroot and separating/cmir/trynegscaling

features:
- reactivated multiaggregation in cons_linear.c on binary variables again (possible due to bug fix below)
- introduced subversion string
- adding variable bounds automatically adds the corresponding implication
- conflict clauses are now collected in a conflict store, redundant clauses are eliminated, and only the best
  "conflict/maxclauses" clauses are added permanently to the problem; the remaining clauses are only added
  temporarily, if they can be used for repropagation
- improved debugging for infeasible cuts and propagations, given a primal feasible solution
- slightly changed LP resolving loop in conflict analysis
- diving heuristics now apply propagation at each step
- if CPLEX returns that the LP exceeds the bound and if no additional LP solves are allowed in conflict analysis,
  we have to perform one additional simplex iteration to get the dual solution that actually violates the objective
  limit
- modified the influence of the depth level in conflict analysis
- new event type SCIP_EVENTTYPE_PRESOLVEROUND
- added zlib support
- replaced all abort() calls by SCIPABORT(); this is defined in def.h to be assert(FALSE)
- modified the Makefile to accept an additional parameter VERBOSE={true,false}
- improved knapsack cover separation
- changed linear constraint presolving s.t. redundant sides are not removed if constraint is an equality
- incorporated clique and implication information in knapsack constraint presolving
- improved performance of c-MIR separator